# skynet-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: verify.yml
doc/: hardcoded-config-audit.md
doc/design/: README.md  de.md  en.md  es.md  fr.md  ja.md  ko.md  pt.md  zh.md
doc/performance-optimization/: README.md  en.md  zh.md
doc/wiki/: APIList.md  Bootstrap.md  Build.md  Cluster.md  CodeCache.md  CriticalSection.md  DebugConsole.md  ExternalService.md  GateServer.md  GettingStarted.md  Home.md  LuaAPI.md  Multicast.md  ShareData.md  Socket.md  SocketChannel.md
doc/wiki/de/: APIList.md  Bootstrap.md  Build.md  Cluster.md  CodeCache.md  CriticalSection.md  DebugConsole.md  ExternalService.md  GateServer.md  GettingStarted.md  Home.md  LuaAPI.md  Multicast.md  ShareData.md  Socket.md  SocketChannel.md
doc/wiki/en/: APIList.md  Bootstrap.md  Build.md  Cluster.md  CodeCache.md  CriticalSection.md  DebugConsole.md  ExternalService.md  GateServer.md  GettingStarted.md  Home.md  LuaAPI.md  Multicast.md  ShareData.md  Socket.md  SocketChannel.md
doc/wiki/es/: APIList.md  Bootstrap.md  Build.md  Cluster.md  CodeCache.md  CriticalSection.md  DebugConsole.md  ExternalService.md  GateServer.md  GettingStarted.md  Home.md  LuaAPI.md  Multicast.md  ShareData.md  Socket.md  SocketChannel.md
doc/wiki/fr/: APIList.md  Bootstrap.md  Build.md  Cluster.md  CodeCache.md  CriticalSection.md  DebugConsole.md  ExternalService.md  GateServer.md  GettingStarted.md  Home.md  LuaAPI.md  Multicast.md  ShareData.md  Socket.md  SocketChannel.md
doc/wiki/ja/: APIList.md  Bootstrap.md  Build.md  Cluster.md  CodeCache.md  CriticalSection.md  DebugConsole.md  ExternalService.md  GateServer.md  GettingStarted.md  Home.md  LuaAPI.md  Multicast.md  ShareData.md  Socket.md  SocketChannel.md
doc/wiki/ko/: APIList.md  Bootstrap.md  Build.md  Cluster.md  CodeCache.md  CriticalSection.md  DebugConsole.md  ExternalService.md  GateServer.md  GettingStarted.md  Home.md  LuaAPI.md  Multicast.md  ShareData.md  Socket.md  SocketChannel.md
doc/wiki/pt/: APIList.md  Bootstrap.md  Build.md  Cluster.md  Home.md  (+11 more)
examples/: README.md  echo.lua  main.lua  pingpong.lua  preload.lua
lualib/: bson.lua  gateserver.lua  loader.lua  sharedata.lua  skynet.lua  socket.lua
lualib/skynet/: cluster.lua  coverage.lua  crypt.lua  debug.lua  multicast.lua  queue.lua  socketchannel.lua
service/: clusteragent.lua  clusterd.lua  clustersender.lua  debug_console.lua  launcher.lua  multicastd.lua  sharedatad.lua
src/: lua_actor.cpp  lua_actor.h  lua_binding.cpp  lua_cluster.cpp  lua_netpack.cpp  lua_profile.cpp  lua_seri.cpp  lua_seri.h  lua_socket_binding.cpp  main.cpp  network.cpp  network.h  platform.cpp  platform.h  service_gate.h  service_logger.h  skynet.cpp  skynet.h  skynet_json.h
tests/: README.md  cpp_unit.cpp
tests/logic/: config_probe.lua  config_probe_service.lua  no_callback.lua  preload.lua  test_cluster.lua  test_debug.lua  test_phase12.lua  test_regressions.lua  test_services.lua  test_socket.lua  test_unit_coverage.lua  test_unit_gate.lua  test_unit_slow.lua
tests/perf/: perf_worker.lua  preload.lua  test_perf.lua
tests/stress/: preload.lua  stress_slowstart.lua  stress_worker.lua  test_stress.lua
tools/: README.md  _run_tool.bat  _run_tool.sh  compare_perf_baseline.bat  compare_perf_baseline.ps1  compare_perf_baseline.sh  package.bat  package.ps1  package.sh  run_coverage.bat  run_coverage.ps1  run_coverage.sh  run_docker_stress.bat  run_docker_stress.ps1  run_docker_stress.sh  run_linux_coverage.sh  run_linux_coverage_in_docker.bat  run_linux_coverage_in_docker.ps1  run_linux_coverage_in_docker.sh  run_linux_perf_in_docker.bat  run_linux_perf_in_docker.ps1  run_linux_perf_in_docker.sh  run_package_smoke.bat  run_package_smoke.ps1  run_package_smoke.sh  run_perf_benchmark.bat  run_perf_benchmark.ps1  run_perf_benchmark.sh  run_soak.bat  run_soak.ps1  run_soak.sh  skynet-tool.bat  skynet-tool.sh  verify.bat  verify.ps1  verify.sh
tools/python/: NOTICE.md  manifest.json
(+5 files in other folders)
